--- a/dotnet-core-device-farm-sample-tests.csproj
+++ b/dotnet-core-device-farm-sample-tests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <!-- <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion> -->
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
