made final edits to readme and testspec file

--- a/dotnet-testspec.yml
+++ b/dotnet-testspec.yml
@@ -51,9 +51,7 @@ phases:
       - >-
         appium --log-timestamp --device-name $DEVICEFARM_DEVICE_NAME
         --platform-name $DEVICEFARM_DEVICE_PLATFORM_NAME --app $DEVICEFARM_APP_PATH
-        --udid $DEVICEFARM_DEVICE_UDID --automation-name XCUITest
-        --default-capabilities "{\"usePrebuiltWDA\": true, \"derivedDataPath\":\"$DEVICEFARM_WDA_DERIVED_DATA_PATH_V1\"}"
-        >> $DEVICEFARM_LOG_DIR/appiumlog.txt 2>&1 &
+        --udid $DEVICEFARM_DEVICE_UDID --chromedriver-executable $DEVICEFARM_CHROMEDRIVER_EXECUTABLE  >> $DEVICEFARM_LOG_DIR/appiumlog.txt 2>&1 &
       
       - >-
         start_appium_timeout=0;
